About Us Section

--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
 
     <div class="landing-page">
       <div class="overlay"></div>
-      <div class="header-area">
-        <div class="logo">Special Design</div>
-        <ul class="links">
-          <li><a href="#" class="active">About</a></li>
-          <li><a href="#">Service</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+
+      <div class="container">
+        <div class="header-area">
+          <div class="logo">Special Design</div>
+          <ul class="links">
+            <li><a href="#" class="active">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
       </div>
       <div class="introduction-text">
         <h1>We are <span>Creative</span> Agency</h1>
@@ -63,6 +66,36 @@
       </div>
     </div>
     <!-- End Landing Page -->
+
+    <!-- Start About Us -->
+    <div class="container">
+      <div class="about-us">
+        <div class="info-box">
+          <h2>About Us</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu
+            sollicitudin mi, eu ultrices elit. Curabitur malesuada auctor lacus
+            ut placerat. Vivamus porta turpis non nisi varius, sit amet sagittis
+            neque luctus. Fusce non odio sed justo euismod ultricies. Nunc
+            faucibus leo tincidunt nulla efficitur finibus. In rhoncus purus ut
+            nisi eleifend, et euismod ipsum aliquam. Ut varius justo nec
+            efficitur dignissim. Phasellus cursus sed lacus ac eleifend. Nam
+            viverra aliquet eleifend. Nam rhoncus varius magna, vel placerat
+            lorem euismod quis. Phasellus varius quam a interdum efficitur. Nam
+            lacinia molestie nunc, sed porta nisi. Fusce ullamcorper non nisi
+            vitae dictum. Mauris malesuada sit amet dolor sed varius. Vestibulum
+            consectetur, mi ac vehicula sagittis, diam metus vehicula lectus,
+            bibendum imperdiet purus massa nec diam. Aliquam porta felis sit
+            amet mollis sollicitudin.
+          </p>
+          <div class="image-box">
+            <img src="imgs/about-us.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End About Us -->
 
     <script src="js/master.js"></script>
   </body>
