--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 
     <div class="landing-page">
       <div class="overlay"></div>
-
       <div class="container">
         <div class="header-area">
           <div class="logo">Special Design</div>
@@ -71,26 +70,22 @@
     <div class="container">
       <div class="about-us">
         <div class="info-box">
-          <h2>About Us</h2>
+          <h2>About us</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc eu
-            sollicitudin mi, eu ultrices elit. Curabitur malesuada auctor lacus
-            ut placerat. Vivamus porta turpis non nisi varius, sit amet sagittis
-            neque luctus. Fusce non odio sed justo euismod ultricies. Nunc
-            faucibus leo tincidunt nulla efficitur finibus. In rhoncus purus ut
-            nisi eleifend, et euismod ipsum aliquam. Ut varius justo nec
-            efficitur dignissim. Phasellus cursus sed lacus ac eleifend. Nam
-            viverra aliquet eleifend. Nam rhoncus varius magna, vel placerat
-            lorem euismod quis. Phasellus varius quam a interdum efficitur. Nam
-            lacinia molestie nunc, sed porta nisi. Fusce ullamcorper non nisi
-            vitae dictum. Mauris malesuada sit amet dolor sed varius. Vestibulum
-            consectetur, mi ac vehicula sagittis, diam metus vehicula lectus,
-            bibendum imperdiet purus massa nec diam. Aliquam porta felis sit
-            amet mollis sollicitudin.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget
+            venenatis nibh, eget pellentesque velit. Integer feugiat, dui at
+            laoreet feugiat, mauris dolor fermentum eros, sit amet egestas felis
+            eros vitae mi. Pellentesque tincidunt posuere leo at euismod. Cras
+            ut magna molestie, dignissim massa a, interdum tortor. Sed quis ante
+            vulputate eros sodales tristique quis vel libero. In et posuere sem.
+            Morbi ex diam, dictum at urna nec, hendrerit finibus arcu. Class
+            aptent taciti sociosqu ad litora torquent per conubia nostra, per
+            inceptos himenaeos. Donec viverra congue molestie. Duis est velit,
+            tristique sed auctor non, viverra eget lacus.
           </p>
-          <div class="image-box">
-            <img src="imgs/about-us.jpg" alt="" />
-          </div>
+        </div>
+        <div class="image-box">
+          <img src="imgs/about-us.jpg" alt="" />
         </div>
       </div>
     </div>
