--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
       <div class="container">
         <h2>Our Gallery</h2>
         <div class="images-box">
-          <img src="imgs/1.jpg" alt="" />
-          <img src="imgs/2.jpg" alt="" />
-          <img src="imgs/3.jpg" alt="" />
-          <img src="imgs/4.jpg" alt="" />
-          <img src="imgs/5.jpg" alt="" />
-          <img src="imgs/6.jpg" alt="" />
-          <img src="imgs/7.jpg" alt="" />
-          <img src="imgs/8.jpg" alt="" />
-          <img src="imgs/9.jpeg" alt="" />
-          <img src="imgs/10.jpg" alt="" />
+          <img src="imgs/1.jpg" alt="Image One" />
+          <img src="imgs/2.jpg" alt="Image Two" />
+          <img src="imgs/3.jpg" alt="Image Three" />
+          <img src="imgs/4.jpg" alt="Image Four" />
+          <img src="imgs/5.jpg" alt="Image Five" />
+          <img src="imgs/6.jpg" alt="Image Six" />
+          <img src="imgs/7.jpg" alt="Image Seven" />
+          <img src="imgs/8.jpg" alt="Image Eight" />
+          <img src="imgs/9.jpeg" alt="Image Nine" />
+          <img src="imgs/10.jpg" alt="Image Ten" />
         </div>
       </div>
     </div>
