--- a/index.html
+++ b/index.html
@@ -157,6 +157,39 @@
 
     <!-- End Gallery -->
 
+    <!-- Start Timeline -->
+    <div class="timeline">
+      <div class="container">
+        <div class="timeline-content">
+          <div class="year">2018</div>
+          <div class="left">
+            <div class="content">
+              <h3>Testing Heading</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate assumenda dicta modi eius deleniti expedita dolores,
+                ipsa excepturi dolore placeat accusantium quis corrupti ad
+                quisquam mollitia quae laboriosam! Ducimus, repellendus!
+              </p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="content">
+              <h3>Testing Heading</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate assumenda dicta modi eius deleniti expedita dolores,
+                ipsa excepturi dolore placeat accusantium quis corrupti ad
+                quisquam mollitia quae laboriosam! Ducimus, repellendus!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Timeline -->
+
     <script src="js/master.js"></script>
   </body>
 </html>
