--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
               </p>
             </div>
           </div>
+          <div class="clearfix"></div>
           <div class="right">
             <div class="content">
               <h3>Testing Heading</h3>
@@ -184,6 +185,32 @@
               </p>
             </div>
           </div>
+          <div class="clearfix"></div>
+          <div class="year">2016</div>
+          <div class="left">
+            <div class="content">
+              <h3>Testing Heading</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate assumenda dicta modi eius deleniti expedita dolores,
+                ipsa excepturi dolore placeat accusantium quis corrupti ad
+                quisquam mollitia quae laboriosam! Ducimus, repellendus!
+              </p>
+            </div>
+          </div>
+          <div class="clearfix"></div>
+          <div class="left">
+            <div class="content">
+              <h3>Testing Heading</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate assumenda dicta modi eius deleniti expedita dolores,
+                ipsa excepturi dolore placeat accusantium quis corrupti ad
+                quisquam mollitia quae laboriosam! Ducimus, repellendus!
+              </p>
+            </div>
+          </div>
+          <div class="clearfix"></div>
         </div>
       </div>
     </div>
