--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </div>
         <div class="feat-box">
           <img src="imgs/Icon_02.png" alt="" />
-          <h4>Development</h4>
+          <h4>Marketing</h4>
           <p>
             We are professional marketeers, we will do anything you imagine in
             no time.
@@ -239,7 +239,7 @@
         </div>
         <div class="feat-box">
           <img src="imgs/Icon_03.png" alt="" />
-          <h4>Development</h4>
+          <h4>Hosting</h4>
           <p>
             We are professional marketeers, we will do anything you imagine in
             no time.
@@ -247,7 +247,7 @@
         </div>
         <div class="feat-box">
           <img src="imgs/Icon_04.png" alt="" />
-          <h4>Development</h4>
+          <h4>Mobile Develope</h4>
           <p>
             We are professional marketeers, we will do anything you imagine in
             no time.
@@ -255,7 +255,7 @@
         </div>
         <div class="feat-box">
           <img src="imgs/Icon_05.png" alt="" />
-          <h4>Development</h4>
+          <h4>Cloud and Servers</h4>
           <p>
             We are professional marketeers, we will do anything you imagine in
             no time.
@@ -263,17 +263,59 @@
         </div>
         <div class="feat-box">
           <img src="imgs/Icon_06.png" alt="" />
-          <h4>Development</h4>
+          <h4>Seo</h4>
           <p>
             We are professional marketeers, we will do anything you imagine in
             no time.
           </p>
         </div>
-        <div class="clear-fix"></div>
+        <div class="clearfix"></div>
       </div>
     </div>
-
     <!-- End Features -->
+
+    <!-- Start Testimonials -->
+    <div class="testimonials">
+      <div class="container">
+        <h2>Testimonials</h2>
+        <div class="ts-box">
+          <p>
+            I'm very happy with the product it's ammazing and I receive it very
+            fast and the price was acceptable
+          </p>
+          <div class="person-info">
+            <img src="https://placehold.it/80/DDD" alt="" />
+            <h4>John Doe</h4>
+            <p>CEO At Company</p>
+          </div>
+        </div>
+        <div class="ts-box">
+          <p>
+            I'm very happy with the product it's ammazing and I receive it very
+            fast and the price was acceptable
+          </p>
+          <div class="person-info">
+            <img src="https://placehold.it/80/EEE" alt="" />
+            <h4>Chris Boston</h4>
+            <p>CEO At Company</p>
+          </div>
+        </div>
+        <div class="ts-box">
+          <p>
+            I'm very happy with the product it's ammazing and I receive it very
+            fast and the price was acceptable
+          </p>
+          <div class="person-info">
+            <img src="https://placehold.it/80/AAA" alt="" />
+            <h4>Stephanie Lincoln</h4>
+            <p>CEO At Company</p>
+          </div>
+        </div>
+      </div>
+      <div class="clearfix"></div>
+    </div>
+
+    <!-- End Testimonials -->
 
     <script src="js/master.js"></script>
   </body>
